cloudstate-message-derive/tests/missing_package_attr.stderr
warning: associated type `handleStream` should have an upper camel case name
   --> $DIR/cloudstate.eventsourced.rs:181:14
    |
181 |         type handleStream: Stream<Item = Result<super::EventSourcedStreamOut, tonic::Status>>
    |              ^^^^^^^^^^^^ help: convert the identifier to upper camel case: `HandleStream`
    |
    = note: `#[warn(non_camel_case_types)]` on by default

error: proc-macro derive panicked
  --> $DIR/missing_package_attr.rs:10:10
   |
10 | #[derive(CommandDecoder)]
   |          ^^^^^^^^^^^^^^
   |
   = help: message: Not found package attribute!
